{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "CraftingTest",
            "id": "027dddd2-08a3-4133-b275-c1862cbaaf7d",
            "actions": [
                {
                    "name": "Craft",
                    "type": "Button",
                    "id": "dd04eafd-db24-4f8f-b4a1-e3c06de7a457",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "f534e349-7f96-4c64-a7e3-91ee3f7c6ef2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate Clockwise",
                    "type": "Button",
                    "id": "b0bf948b-e10b-4953-897e-3877e9773bcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate Anti Clockwise",
                    "type": "Button",
                    "id": "907361e7-127a-4f05-b0cd-20383341fca3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use Tool",
                    "type": "Button",
                    "id": "b20ba3fb-68c6-45d5-8d27-f4e424457f73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "a0215b2e-7321-4369-b4c3-54fa789f6be6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use Right Tool",
                    "type": "Button",
                    "id": "639770f7-e28b-48e4-8024-1deff51316b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Equip Tool",
                    "type": "Button",
                    "id": "9863c829-dd32-4fab-9fab-c982932576e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e43aefbe-b885-4495-920d-02000b02bcfe",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Test",
                    "action": "Craft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a58f67-0f0b-482d-8b05-367239d9425c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc4c9a31-b5d3-4cd9-930e-74f24f2c1588",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate Clockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f304852-4e81-4619-9ddb-35c21b7332fd",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate Anti Clockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "594ddd39-adf9-4a03-b747-c0530ba2542e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use Tool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71aec895-62dd-4e9b-a2f1-c312dd5062e6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25bd9dd1-0347-4c47-8c74-bf2b22419eeb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use Right Tool",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3776cac3-f22b-4379-a16d-78489e549c35",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Equip Tool",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Test",
            "bindingGroup": "Test",
            "devices": []
        }
    ]
}